@@ -1,5 +1,8 @@
 Browser.pm
 Changes
+examples/ex1.pl
+examples/ex2.pl
+examples/ex3.pl
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
