@@ -1,4 +1,5 @@
 0.02
+ - Add examples/ directory.
 
 0.01 2013-10-29
  - First version.
